[tool.poetry]
name = "cve-2021-35042"
version = "0.1.0"
description = ""
authors = ["Ravi Kotecha <kotecha.ravi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.4"
psycopg2 = "^2.9.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
